# ndi_streamer

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  config.mak
cmake/: FindFFMPEG.cmake  FindNDI.cmake
src/: common.c  common.h  ffmpeg_output.c  ffmpeg_output.h  frame_converter.c  frame_converter.h  ndi_streamer.c  util.c  util.h
